@@ -23,6 +23,7 @@ import javax.servlet.http.HttpServletResponse;
 import org.eclipse.kapua.commons.model.id.KapuaEid;
 import org.eclipse.kapua.commons.util.xml.XmlUtil;
 import org.eclipse.kapua.locator.KapuaLocator;
+import org.eclipse.kapua.service.device.call.kura.model.configuration.KuraDeviceConfigurationUtils;
 import org.eclipse.kapua.service.device.management.configuration.DeviceConfiguration;
 import org.eclipse.kapua.service.device.management.configuration.DeviceConfigurationManagementService;
 import org.slf4j.Logger;
@@ -31,16 +32,17 @@ import org.slf4j.LoggerFactory;
 public class DeviceSnapshotsServlet extends HttpServlet {
 
     private static final long serialVersionUID = -2533869595709953567L;
+    private static final String UTF_8 = "UTF-8";
 
     private static final Logger logger = LoggerFactory.getLogger(DeviceSnapshotsServlet.class);
 
     @Override
     public void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        response.setCharacterEncoding("UTF-8");
+        response.setCharacterEncoding(UTF_8);
         PrintWriter writer = response.getWriter();
         try {
-
+            boolean isNative = Boolean.parseBoolean(request.getParameter("native"));
             // parameter extraction
             String account = request.getParameter("scopeId");
             String clientId = request.getParameter("deviceId");
@@ -56,16 +58,26 @@ public class DeviceSnapshotsServlet extends HttpServlet {
                     null,
                     null);
 
-            String contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_%s_%s_%s.xml; ";
+            String contentDispositionFormat;
+            if (isNative) {
+                contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_device_%s_%s_%s.xml; ";
+            } else {
+                contentDispositionFormat = "attachment; filename*=UTF-8''snapshot_platform_%s_%s_%s.xml; ";
+            }
 
             response.setContentType("application/xml; charset=UTF-8");
             response.setHeader("Cache-Control", "no-transform, max-age=0");
             response.setHeader("Content-Disposition", String.format(contentDispositionFormat,
-                    URLEncoder.encode(account, "UTF-8"),
-                    URLEncoder.encode(clientId, "UTF-8"),
+                    URLEncoder.encode(account, UTF_8),
+                    URLEncoder.encode(clientId, UTF_8),
                     snapshotId));
 
-            XmlUtil.marshal(conf, writer);
+            if (isNative) {
+                XmlUtil.marshal(KuraDeviceConfigurationUtils.toKuraConfiguration(conf), writer);
+            } else {
+                XmlUtil.marshal(conf, writer);
+            }
+
         } catch (Exception e) {
             logger.error("Error creating Excel export", e);
             throw new ServletException(e);
